# rongai-house-hunters-api

./: .env  .gitignore  pyproject.toml
app/core/: config.py
app/models/: property.py
app/routers/: houses.py
app/schemas/: property.py
fastapi/: pyproject.toml  railway.toml
fastapi/app/: main.py
fastapi/app/core/: cache.py  config.py  database.py  debs.py  email.py  security.py  websocket_manager.py
fastapi/app/models/: appointment.py  caretaker.py  favourite.py  notification.py  profile.py  property.py  report.py  review.py
fastapi/app/routers/: admin.py  appointments.py  auth.py  caretakers.py  favourites.py  houses.py  notifications.py  reports.py  reviews.py
fastapi/app/schemas/: auth.py  property.py
n8n-workflows/: 01-RHH Heartbeat.json  02-RHH Listing Watcher.json  README.md
